[tool.poetry]
name = "roguelike-game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
singledispatch = "^3.6.2"
jsonpickle = "^2.0.0"
cffi = "^1.14.5"
libtcod-cffi = "^5.0.0"
pycparser = "^2.17"
tdl = "^6.0.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
